--- a/TrendShirts_Backend/src/main/resources/application.properties
+++ b/TrendShirts_Backend/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shirtstore
+spring.datasource.url=jdbc:mariadb://localhost:3306/identityservice
 spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.port=8080
-logging.level.org.springframework=INFO
-logging.level.com.example.backend=DEBUG
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
