--- a/TrendShirts_Backend/src/main/resources/application.properties
+++ b/TrendShirts_Backend/src/main/resources/application.properties
@@ -1,5 +1,28 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/identityservice
+spring.datasource.url=jdbc:mariadb://localhost:3306/trendshirts
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+# JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT properties
+app.jwt.secret=trendShirts2024SecureKeyForJWTAuthenticationDontShareThis
+app.jwt.expiration-ms=86400000
+
+# File upload properties
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Server properties
+server.port=8080
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.fit.iuh=DEBUG
+
+# Active profile
+spring.profiles.active=dev
