--- a/TrendShirts_Frontend/package.json
+++ b/TrendShirts_Frontend/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.0.15",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
