--- a/TrendShirts_Backend/src/main/resources/application.properties
+++ b/TrendShirts_Backend/src/main/resources/application.properties
@@ -17,12 +17,19 @@ app.jwt.expiration-ms=86400000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Server properties
+# Server configuration
 server.port=8080
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# Cross-Origin Resource Sharing
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
 
 # Logging
 logging.level.org.springframework.security=DEBUG
-logging.level.fit.iuh=DEBUG
-
+logging.level.org.springframework.web=DEBUG
 # Active profile
 spring.profiles.active=dev
