--- a/TrendShirts_Frontend/package.json
+++ b/TrendShirts_Frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.483.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
